--- a/rottenpotatoes/app/views/movies/edit.html.haml
+++ b/rottenpotatoes/app/views/movies/edit.html.haml
@@ -14,6 +14,6 @@
   = date_select :movie, :release_date
   
   = lable :movie, :director, 'Director'
-  = text_field :movie, 'director'
+  = text_field :movie
 
   = submit_tag 'Update Movie Info'
