--- a/rottenpotatoes/app/views/movies/show.html.haml
+++ b/rottenpotatoes/app/views/movies/show.html.haml
@@ -18,4 +18,4 @@
 = button_to 'Delete', movie_path(@movie), :method => :delete, :confirm => 'Are you sure?'
 = link_to 'Back to movie list', movies_path
 %p
-= link_to 'Find movies with same director', movie_path(@movie), :method => :director
+= link_to 'Find movies with same director', movie_path(@movie), :method => :find_director
