--- a/rottenpotatoes/app/views/movies/show.html.haml
+++ b/rottenpotatoes/app/views/movies/show.html.haml
@@ -9,6 +9,9 @@
   %li
     Released on:
     = @movie.release_date.strftime("%B %d, %Y")
+  %li
+    Director:
+    = @movie.director
 
 %h3 Description:
 
@@ -18,4 +21,4 @@
 = button_to 'Delete', movie_path(@movie), :method => :delete, :confirm => 'Are you sure?'
 = link_to 'Back to movie list', movies_path
 %p
-= link_to 'Find movies with same director', search_samedirector_path(@movie.title)
+= link_to 'Find Movies With Same Director', search_samedirector_path(@movie.title)
